<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2"
    xmlns:tools="http://schemas.android.com/tools" tools:ignore="UnusedResources">
    <string name="title_home_page">Home</string>
    <string name="main_sign_in">Sign In</string>
    <string name="main_sign_out">Sign Out</string>
    <string name="main_switch_school">Switch School</string>
    <string name="menu">Menu</string>
    <string name="menu_item_maps_title">Maps</string>
    <string name="menu_item_grades_title">Grades</string>
    <string name="menu_item_about_title">About</string>
    <string name="menu_item_notifications_title">Notifications</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_to_contacts">Add to Contacts</string>
    <string name="menu_add_to_calendar">Add to Calendar</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_sign_in">Sign In</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_switch_school">Switch School</string>
    <string name="menu_search_school_hint">Search schools</string>
    <string name="menu_header_applications">Applications</string>
    <string name="menu_header_actions">Actions</string>
    <string name="menu_header_indicator_description">Header Indicator</string>
    <string name="menu_information">Information</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_school_selection">Choose School</string>
    <string name="no_institutions">There are no institutions to display at this time.</string>
    <string name="school_selection_confirmation">You have selected \'%1$s\'.  Is that correct?</string>
    <string name="title_activity_configuration_loading">Configuration Loading</string>
    <string name="configuration_loading_failed">Configuration loading failed</string>
    <string name="configuration_loading_message">Loading Configuration. Please wait&#8230;</string>
    <string name="configuration_loading_missing_config">"Unable to download the configuration from that link."</string>
    <string name="label_name">Name</string>
    <string name="label_title">Title</string>
    <string name="label_phone">Phone</string>
    <string name="label_mobile">Mobile</string>
    <string name="label_email">Email</string>
    <string name="label_address">Address</string>
    <string name="label_website">Website</string>
    <string name="label_type">Type</string>
    <string name="label_description">Description</string>
    <string name="label_department">Department</string>
    <string name="label_office">Office</string>
    <string name="label_room">Room</string>
    <string name="label_campus">Campus</string>
    <string name="label_search">Search</string>
    <string name="label_faculty">Faculty</string>
    <string name="label_credits">Credits</string>
    <string name="label_meeting_information">Meeting Information</string>
    <string name="label_open">Open</string>
    <string name="label_date">Date</string>
    <string name="label_location">Location</string>
    <string name="label_done">Done</string>
    <string name="content_desc_warning">Warning</string>
    <string name="services_feature_not_supported">Feature is not supported by this device.</string>
    <string name="label_format">
	    <xliff:g id="label" example="Name">%1$s</xliff:g>:
	</string>
	<string name="label_string_content_format">
	    <xliff:g id="label" example="Name">%1$s</xliff:g>: <xliff:g id="content" example="John Smith">%2$s</xliff:g>
	</string>
	<string name="label_integer_content_format">
	    <xliff:g id="label" example="Room">%1$s</xliff:g>: <xliff:g id="content" example="201">%2$d</xliff:g>
	</string>
	<string name="label_float_content_format">
	    <xliff:g id="label" example="Credits">%1$s</xliff:g>: <xliff:g id="content" example="3.00">%2$.2f</xliff:g>
	</string>
	<string name="label_with_count_format">
	    <xliff:g id="label" example="Cart">%1$s</xliff:g> (<xliff:g id="count" example="5">%2$d</xliff:g>)
	</string>
    <string name="dialog_sign_in">Sign In</string>
    <string name="dialog_sign_in_title">Sign In</string>
    <string name="dialog_use_fingerprint">Use fingerprint to unlock</string>
    <string name="dialog_use_fingerprint_summary">Allow me to sign in with my fingerprint</string>
    <string name="dialog_stay_signed_in">Stay signed in</string>
    <string name="dialog_username">Username</string>
    <string name="dialog_password">Password</string>
    <string name="dialog_sign_in_empty">Username or Password can not be empty.</string>
    <string name="dialog_sign_in_failed">Sign In Failed. Please check the network connection and/or your Username and Password. Please contact your institution’s IT staff for assistance with login.</string>
    <string name="dialog_signed_in">You have signed in.</string>
    <string name="dialog_signed_out">You have signed out.</string>
    <string name="dialog_idle_sign_out">You have been idle too long and have signed out.</string>
    <string name="fingerprint_cancel">Cancel</string>
    <string name="fingerprint_use_password">Use password</string>
    <string name="fingerprint_description">Confirm fingerprint to continue</string>
    <string name="fingerprint_hint">Touch sensor</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized. Try again</string>
    <string name="fingerprint_success">Fingerprint recognized</string>
    <string name="dialog_select_categories">Select Categories</string>
    <string name="dialog_re_authenticate">Re-authenticating, please wait&#8230;</string>
	<string name="dialog_continue">Continue</string>
	<string name="dialog_go_back">Go Back</string>
	<string name="dialog_security_warning">Security warning</string>
	<string name="dialog_cert_warning_statement">"There are problems with the security certificate for this site."</string>
	<string name="dialog_field_empty">Field cannot be empty</string>
	<string name="unauthorized_feature">You do not have permission to use this feature.</string>
    <string name="row_category_label">\u2022</string>
    <string name="row_contact_label">Contact:</string>
    <string name="row_email_label">Email:</string>
    <string name="row_date_label">Date:</string>
    <string name="row_due_label">Due:</string>
    <string name="row_location_label">Location:</string>
    <string name="default_image">Image</string>
    <string name="no_data">No data</string>
    <string name="no_results_found">No results found.</string>
    <string name="share">Share</string>
    <string name="terms">Terms</string>
    <string name="layers">Layers</string>
    <string name="unavailable">Unavailable</string>
    <string name="dash_separator">"-"</string>
    <string name="line_separator">|</string>
    <string name="detail_page_title_format">%s Detail</string>
    <string name="nothing_to_display">Nothing to display</string>
    <string name="not_applicable">N/A</string>
    <string name="all_day_event">All Day Event</string>
    <string name="title_activity_default_detail">Details</string>
    <string name="loading_message">Loading&#8230;</string>
    <string name="date_to_date_format">
	    <xliff:g id="startDate" example="10-8-14">%1$s</xliff:g> - <xliff:g id="endDate" example="10-12-14">%2$s</xliff:g>
	</string>
	<string name="date_all_day_event_format">
	    <xliff:g id="startDate" example="10-8-14">%s</xliff:g> All Day Event
	</string>
	<string name="date_time_format">
	    <xliff:g id="date" example="10-8-14">%1$s</xliff:g> <xliff:g id="time" example="11:00 AM">%2$s</xliff:g>
	</string>
	<string name="date_time_to_time_format">
	    <xliff:g id="date" example="10-8-14">%1$s</xliff:g> <xliff:g id="startTime" example="11:00 AM">%2$s</xliff:g> - <xliff:g id="endTime" example="2:00 PM">%3$s</xliff:g>
	</string>
	<string name="date_time_to_date_time_format">
	    <xliff:g id="startDate" example="10-8-14">%1$s</xliff:g> <xliff:g id="startTime" example="12:00 PM">%2$s</xliff:g> - <xliff:g id="endDate" example="10-8-15">%3$s</xliff:g> <xliff:g id="endTime" example="12:00 PM">%4$s</xliff:g>
	</string>
	<string name="time_to_time_format">
	    <xliff:g id="startTime" example="11:00 AM">%1$s</xliff:g> - <xliff:g id="endTime" example="2:00 PM">%2$s</xliff:g>
	</string>
	<string name="default_first_last_name_format">
	    <xliff:g id="firstName" example="John">%1$s</xliff:g> <xliff:g id="lastName" example="Smith">%2$s</xliff:g>
	</string>
	<string name="default_last_name_first_initial_format">
	    <xliff:g id="lastName" example="Smith">%1$s</xliff:g>, <xliff:g id="firstInitial" example="J">%2$s</xliff:g>
	</string>
	<string name="default_course_section_format">
	    <xliff:g id="courseName" example="HIST-103">%1$s</xliff:g>-<xliff:g id="sectionNumber" example="01">%2$s</xliff:g>
	</string>
	<string name="default_course_section_title_format">
	    <xliff:g id="courseName" example="HIST-103">%1$s</xliff:g>-<xliff:g id="sectionNumber" example="01">%2$s</xliff:g> - <xliff:g id="sectionTitle" example="American History">%3$s</xliff:g>
	</string>
	<string name="default_building_and_room_format">
	    <xliff:g id="buildingName" example="Main Hall">%1$s</xliff:g>, <xliff:g id="roomNumber" example="122">%2$s</xliff:g>
	</string>
	<string name="default_meeting_days_and_times_format">
	    <xliff:g id="daysOfWeeks" example="Mon, Wed, Fri">%1$s</xliff:g>: <xliff:g id="startTime" example="11:00 AM">%2$s</xliff:g> - <xliff:g id="endTime" example="2:00 PM">%3$s</xliff:g>
	</string>
	<string name="default_meeting_days_times_and_type_format">
	    <xliff:g id="daysOfWeeks" example="Mon, Wed, Fri">%1$s</xliff:g>: <xliff:g id="startTime" example="11:00 AM">%2$s</xliff:g> - <xliff:g id="endTime" example="2:00 PM">%3$s</xliff:g> | <xliff:g id="meetingType" example="Lab">%4$s</xliff:g>
	</string>
	<string name="default_two_string_separator_format">
	    <xliff:g id="string" example="stringOne">%1$s</xliff:g> | <xliff:g id="string" example="stringTwo">%2$s</xliff:g>
	</string>
	<string name="default_phone_with_extension_format">
        <xliff:g id="phoneNumber" example="123-123-1234">%1$s</xliff:g> ext. <xliff:g id="phoneExtension" example="7890">%2$s</xliff:g>
    </string>
    <string name="title_activity_about">About</string>
    <string name="about">About</string>
    <string name="about_logo_description">School Logo</string>
    <string name="about_app_version">App Version</string>
    <string name="about_server_version">Server Version</string>
    <string name="about_phone_description">Phone Link</string>
    <string name="about_email_description">Email Link</string>
    <string name="about_website_description">Website Link</string>
    <string name="about_privacy_label">University Privacy Policy</string>
    <string name="course_details_faculty">Faculty</string>
    <string name="course_details_no_faculty">No instructors assigned</string>
    <string name="course_details_no_meetings">No specified meeting times</string>
    <string name="settings_category_security">Security</string>
    <string name="settings_category_location">Location Awareness</string>
    <string name="settings_reset_locations_title">Un-mute all Locations</string>
    <string name="settings_reset_locations_summary">You will be notified at all locations</string>
    <string name="settings_reset_locations_dialog_message">Are you sure? You will be notified at all locations that have associated information or services.</string>
    <string name="settings_reset_locations_reset_button">Reset</string>
    <string name="settings_reset_locations_cancel_button">Cancel</string>
    <string name="settings_location_disabled_title">Location Access Disabled</string>
    <string name="settings_location_disabled_summary">Tap to enable Location permission</string>
</resources>